refactor Spotify playlist service; improve error handling and optimize asynchronous track fetching